[gd_scene load_steps=4 format=3 uid="uid://pjv5ptit5tvg"]

[ext_resource type="Script" uid="uid://cuquedrekqsq1" path="res://addons/Weapons/Scripts/Ammunition/AmmoRefillerScript.gd" id="1_bsrep"]
[ext_resource type="PackedScene" uid="uid://cyxdexqmowyvh" path="res://addons/Addon Assets/Weapon Models/AmmunitionBox/ammobox_low.glb" id="2_ammobox"]

[sub_resource type="BoxShape3D" id="BoxShape3D_detect"]
size = Vector3(5, 4, 6)

[node name="AmmoRefiller" type="Node3D"]
script = ExtResource("1_bsrep")

[node name="DetectArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("BoxShape3D_detect")

[node name="Model" parent="." instance=ExtResource("2_ammobox")]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, 0, 0.5363133, 0)

[connection signal="body_entered" from="DetectArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="DetectArea" to="." method="_on_body_exited"]
